--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.username=sa
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+
